fix revoke popup in balance, orders. Some fix in datepicker mob

--- a/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.scss
+++ b/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.scss
@@ -134,3 +134,9 @@ input:not([value=""]){
   -webkit-appearance: none;
   margin: 0;
 }
+@media (min-width: 1200px) {
+  .revoke-request {
+    right: 15px;
+
+  }
+}
