--- a/src/app/static-pages/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/static-pages/terms-and-conditions/terms-and-conditions.component.html
@@ -1,3 +1,151 @@
-<p>
-  terms-and-conditions works!
-</p>
+<div class="container">
+  <div class="page-title">
+    <h1 class="page-title__text">
+      Terms and conditions
+    </h1>
+  </div>
+  <h6 class="subtitle">User agreement</h6>
+  <p> This user Agreement is an electronic agreement between the User and Exrates.me - the operator that provides to Users online tool, that allows to trade with virtual
+    currencies all over the world.</p>
+  <p>This Agreement permanently located at https://exrates.me/termsAndConditions and contains all conditions of the public offer of the Exrates.me.</p>
+  <p>When the User creating an account on the Site or starting to use any other Services which is provided by Exrates.me, User confirm that it read, understand, and
+    completely agree to this Agreement in effect from time to time.</p>
+  <p>IF YOU DO NOT AGREE WITH THE CONDITIONS OF THIS USER AGREEMENT, PLEASE DO NOT REGISTER ON THE WEB-SITE: https://exrates.me AND DO NOT START TO USE ITS SERVICES AND
+    EXIT THE SITE IMMEDIATELY.</p>
+  <p>Exrates.me AND USERS OF THE ONLINE TOOL WHICH IS LOCATED AT HTTPS://EXRATES.ME HAVE CONCLUDED THE PRESENT AGREEMENT ON THE FOLLOWING CONDITIONS:</p>
+  <h6 class="subtitle">Terms and conditions</h6>
+  <p>This Terms and conditions will change at any time without notice and access to, and use the Site may be restricted or terminated at any time. You are therefore
+    advised
+    to review this Terms each time you access this website.</p>
+  <h6 class="subtitle">Local restrictions and important law information</h6>
+  <p>By registering at the Website, you agree that you will never use the Service for any illegal purposes including but not limited to money laundering, illegal gambling
+    operations, financing of terrorism or hacking and that you are at least 18 years old and you have a legal capacity to trade on the https://exrates.me</p>
+  <p>We inform you, that virtual currency and operation with it may vary laws regulations different countries. Please, make sure that you are not breaking the law of the
+    country in which you reside and/or the country from which you access the Internet.</p>
+  <h6 class="subtitle">APPLICABLE LAW AND JURISDICTION</h6>
+  <p>Access to and use of the Site as well as the Terms are governed and construed in accordance with Swiss Law. The parties agree to irrevocably submit to the exclusive
+    jurisdiction of the Swiss Courts, unless as part of a dispute resolution, they agree in writing otherwise. Depending on your country of residence, you may not be able
+    to use all the functions of the Site. We are required by law to block transactions involving residents of countries that are on Swiss or US watch lists. At this time,
+    these include Iran, North Korea, Cuba, Syria and North Sudan. It is your own responsibility to follow those rules and laws in your country of residence and/or country
+    from which you access this Site and Services.</p>
+  <h6 class="subtitle">RESPONSIBILITY FOR BREACH OF USER AGREEMENT AND TERMS OF CONDITIONS</h6>
+  <p>In case of revealing suspicious operations by the Users, access to the Personal Account may be limited to conduct an inspection for a period from 24 hours to 30
+    business days.</p>
+  <p>In case of repeated violation of these Terms, the Service has the right to cancel the User’s Personal Account with the mandatory return of all funds, notifying the
+    User about this by sending the corresponding e-mail no later than 24 hours before such cancellation.</p>
+  <h6 class="subtitle">NOT OFFER PRINCIPLE</h6>
+  <p>The information, products, data, services, tools and documents contained or described on this site (the “Content”) are for information purposes only and constitute
+    neither an advertisement or recommendation nor an offer or solicitation to buy or sell virtual currencies, to affect any transaction or to enter into any legal
+    relations. Prior to making investment decisions users should conduct a thorough investigation and obtain all necessary professional advice for all issues, including
+    your eligibility to make such investment in terms of the applicable law. Nothing on this site constitutes investment, legal, accounting or tax advice, or a
+    representation that any investment or strategy is suitable or appropriate for individual circumstances, or otherwise constitutes a personal recommendation for any
+    specific investor.</p>
+
+  RISK STATEMENT
+
+  TRADING OR INVESTMENT OF THE CURRENCY/VIRTUAL CURRENCY CAN BE RISKY.
+
+  Prior to making investment decisions users should conduct a thorough investigation and obtain all necessary professional advice for all issues, including your
+  eligibility to make such investment in terms of the applicable law. Nothing on this site constitutes investment, legal, accounting or tax advice, or a representation
+  that any investment or strategy is suitable or appropriate for individual circumstances, or otherwise constitutes a personal recommendation for any specific investor.
+
+  User accept all it financial risks which it can have from the trading or investment.
+
+  PRIVACY POLICY
+
+  Exrates.me. respects Users right to privacy and the committed to protecting users privacy in accordance with applicable data protection laws.
+
+  Exrates.me. will never provide User’s personal information to third parties, the Exrates.me. will not provide any user data saved in databases to anyone. We will
+  provide user data only to governmental and judicial authorities under the court decision.
+
+  You agree that the Exrates.me. can collect your personal information:
+
+  1. Your name and surname.
+
+  2. Your date of birth.
+
+  3. Your residential address.
+
+  4. Your banking details including your Account number.
+
+  5. The Copy of your ID card (passport, national ID card, driving licence etc.).
+
+  6. The Copy of your electricity bill or the copy of your bank statement confirming your residential address.
+
+  7. Your email address.
+
+  8. Your phone number.
+
+  9. Any other personal data provided voluntarily by users.
+
+  SECURITY OF THE PERSONAL INFORMATION
+
+  Exrates.me implemented security measures to ensure the confidentiality of your personal data and to protect them from loss, misuse, alteration or destruction. Only
+  authorized personnel of Exrates.me have access to your personal data, and these personnel are required to treat the information as confidential. The security measures
+  in place will, from time to time, be reviewed in line with legal and technical developments.
+
+  The information we receive from you can be transferred and stored outside the European Economic Area (EEA). The information about you can be processed by our employees
+  or employees of service providers outside the EEA. When storing or otherwise processing information by such third parties outside the EEA, we guarantee that we will
+  notify such third parties of our obligations under this Privacy Policy and will enter with them into relations that will impose obligations for them regarding your
+  personal data, which are at least have level of protection as specified in this Privacy Policy. Such employees, among other things, can process your requests, payment
+  details and provide technical support. By giving us your personal data, you consent to the transfer, storage and processing of your personal data. In its turn, we will
+  take all necessary measures to ensure that your personal data is processed in compliance with the security rules and in accordance with the provisions of this Privacy
+  Policy.
+
+  Unfortunately, the transmission of information via the internet is not completely secure. Although we will do our best to protect your personal data, we cannot
+  guarantee the security of your data transmitted to our site, and any transmission is at your own risk. Once we have received your information, we will use strict
+  procedures and security features to try to prevent unauthorized access.
+
+  Exrates.me have a right to hold and send to the authorised governmental bodies information about the hackers or users (persons) who are engaged in illegal actions.
+
+  RIGHTS OF THE OWNER OF THE PERSONAL INFORMATION
+
+  By contacting Exrates.me User can use folowing rights:
+
+  the right to delete your data (all or part thereof);
+
+  the right to change or correct your data, in particular when it is incorrectly stated;
+
+  the right to object or restrict processing of your data;
+
+  the right to access to your data and / or a copy of your data, which you provided to Exrates.me, in a machine-readable format.
+
+  IP ADDRESSES/COOKIES
+
+  The Exrates.me collects information about user’s computer, including their IP address, operating system and the type of browser, in order to manage Exrates.me own
+  system. The Exrates.me uses this information only for statistical purposes and this information is not used to identify individuals.
+
+  The Exrates.me is using:
+
+  cookies that are inevitably necessary for accessing secure zones of the Website;
+
+  functional cookies that allow the Website to remember users‘ settings;
+
+  executive cookies that inform the Operator about the use of the Service, for example which pages are most visited and on which pages occur error messages. These cookies
+  do not collect any information that could help to identify the user, they help to improve the Website;
+
+  third party cookies that are inserted at specific locations of the Website, that are part of the advertising system and they are used mainly for targeted advertising.
+
+  By using and registering at the Website you agree that the Exrates.me, uses this technology.
+
+  LIMITATION OF LIABILITY AND WARRANTIES
+
+  Exrates.me SHALL HAVE NO LIABILITY FOR ANY DAMAGES OF ANY KIND (INCLUDING WITHOUT LIMITATION INDIRECT, SPECIAL, INCIDENTAL, CONSEQUENTIAL, OR TORT DAMAGES, OR LOST
+  PROFITS) IN CONNECTION WITH YOUR USE OF THE SERVICES AND WEB SITE.
+
+  Exrates.me PROVIDES NO GUARANTEE AS TO THE PERFORMANCE OR THE UNINTERRUPTED AVAILABILITY OF THE SERVICES. THE SERVICES ARE PROVIDED ON AN "AS IS," "AS AVAILABLE" BASIS
+  WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED. Exrates.me DISCLAIMS ALL WARRANTIES, EXPRESS OR IMPLIED, INCLUDING, WITHOUT LIMITATION, IMPLIED WARRANTIES OF
+  MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, TITLE AND NON-INFRINGEMENT WITH RESPECT TO THE SERVICES. Exrates.me DOES NOT REPRESENT OR WARRANT THAT THE SERVICES
+  AND THE INFORMATION CONTAINED THEREIN ARE ACCURATE, COMPLETE, RELIABLE, CURRENT OR ERROR-FREE.
+
+  INDEMNITY
+
+  To the full extent permitted by applicable law, you hereby agree to indemnify Exrates.me, and its partners against any action, liability, cost, claim, loss, damage,
+  proceeding or expense suffered or incurred if direct or not directly arising from your use of Exrates.me Site, your use of the Service, or from your violation of these
+  Terms and Conditions.
+
+  SUPPORT
+
+  If, after having read this agreement in its entirety, you still have doubts or you have any questions, with regard to the terms, the site https://exrates.me, please, be
+  free to contact Exrates.me support at the email address: exrate@exrates.me.
+</div>
