--- a/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
@@ -49,7 +49,7 @@
       <span>{{item.amountWithCommission | replaceNumber}} {{arrPairName[1]}}</span>
     </td>
     <td class="table__cell">
-      <button class="btn btn--small btn--empty-red table__row-btn"
+      <button class="btn btn--small btn--empty-red btn--hidden"
               style="width: 100%; max-width: 58px;"
               (click)="onShowCancelOrderConfirm(item.id)"
       >Cancel</button>
