--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -87,8 +87,8 @@
                     <div class="revoke-request" *ngIf="showCancelOrderConfirm === item.id">
                       <div class="revoke-request__title">Are you sure you want to cancel selected order?</div>
                       <div class="revoke-request__button-wrap">
-                        <button class="btn btn&#45;&#45;small" (click)="cancelOrder(item)">Yes</button>
-                        <button class="btn btn&#45;&#45;small" (click)="onShowCancelOrderConfirm(null)">No</button>
+                        <button class="btn btn--small" (click)="cancelOrder(item)">Yes</button>
+                        <button class="btn btn--small" (click)="onShowCancelOrderConfirm(null)">No</button>
                       </div>
                       <div class="revoke-request__triangle"></div>
                     </div>
@@ -105,6 +105,7 @@
           <!-- t-row end-->
         </tbody>
       </table>
+
     </div>
 
     <!--filter-popup start-->
