--- a/src/app/orders/open-orders/open-orders.component.html
+++ b/src/app/orders/open-orders/open-orders.component.html
@@ -238,15 +238,15 @@
     <table class="table">
       <thead>
         <tr>
-          <th class="table__cell-head table__cell-head--tal">Order id</th>
-          <th class="table__cell-head table__cell-head--tal">Created</th>
-          <th class="table__cell-head table__cell-head--tal">Market</th>
-          <th class="table__cell-head table__cell-head--tal">Type</th>
-          <th class="table__cell-head table__cell-head--tal">Amount</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Order id</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Created</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Market</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Type</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Amount</th>
           <th class="table__cell-head table__cell-head--tal" style="width: 60px;"></th>
-          <th class="table__cell-head table__cell-head--tal">Price</th>
-          <th class="table__cell-head table__cell-head--tal">Comission</th>
-          <th class="table__cell-head table__cell-head--tal">Total</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Price</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Comission</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Total</th>
           <th class="table__cell-head table__cell-head--tal" style="width: 80px;"></th>
         </tr>
       </thead>
