--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -261,14 +261,14 @@
     <table class="table">
       <thead>
         <tr>
-          <th class="table__cell-head table__cell-head--tal">Date</th>
-          <th class="table__cell-head table__cell-head--tal">Pair</th>
-          <th class="table__cell-head table__cell-head--tal">Type</th>
-          <th class="table__cell-head table__cell-head--tal">Price</th>
-          <th class="table__cell-head table__cell-head--tal">Amount</th>
-          <th class="table__cell-head table__cell-head--tal">Comission</th>
-          <th class="table__cell-head table__cell-head--tar">In total</th>
-          <th class="table__cell-head table__cell-head--tar">Status</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Date</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Pair</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Type</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Price</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Amount</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Comission</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tar">In total</th>
+          <th class="table__cell-head table__cell-head--sort table__cell-head--tar">Status</th>
         </tr>
       </thead>
       <tbody class="table__body">
