--- a/src/app/funds/balance/balance-table/balance-table.component.html
+++ b/src/app/funds/balance/balance-table/balance-table.component.html
@@ -1,12 +1,12 @@
 <table class="table">
     <thead>
       <tr>
-        <th class="table__cell-head table__cell-head--tal">Currency</th>
-        <th class="table__cell-head table__cell-head--tar">Total balance</th>
-        <th class="table__cell-head table__cell-head--tar">Available balance</th>
-        <th class="table__cell-head table__cell-head--tar">Pending</th>
-        <th class="table__cell-head table__cell-head--tar">In Withdraw</th>
-        <th class="table__cell-head table__cell-head--tar">In Orders</th>
+        <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Currency</th>
+        <th class="table__cell-head table__cell-head--sort table__cell-head--tal">Total balance</th>
+        <th class="table__cell-head table__cell-head--sort table__cell-head--tar">Available balance</th>
+        <th class="table__cell-head table__cell-head--sort table__cell-head--tar">Pending</th>
+        <th class="table__cell-head table__cell-head--sort table__cell-head--tar">In Withdraw</th>
+        <th class="table__cell-head table__cell-head--sort table__cell-head--tar">In Orders</th>
         <!-- <th class="table__cell-head table__cell-head--tar">Change %</th> -->
         <th class="table__cell-head table__cell-head--tac">Deposit</th>
         <th class="table__cell-head table__cell-head--tac">Transfer</th>
@@ -32,7 +32,7 @@
             <span class="balance__currency-name">{{item.currencyDescription}}</span>
           </div>
         </td>
-        <td class="table__cell table__cell--tar">
+        <td class="table__cell table__cell--tal">
           <span>{{+item.activeBalance + +item.reservedByOrders}}</span>
         </td>
         <td class="table__cell table__cell--tar">
@@ -54,16 +54,16 @@
           </div>
         </td> -->
         <td class="table__cell">
-          <button class="btn btn--center btn--small btn--hidden" (click)="cryptoDepositOut.emit(item)">Deposit</button>
+          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoDepositOut.emit(item)">Deposit</button>
         </td>
         <td class="table__cell">
-          <button class="btn btn--center btn--small btn--hidden" (click)="transferOut.emit(item)" >Transfer</button>
+          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="transferOut.emit(item)" >Transfer</button>
         </td>
         <td class="table__cell">
-          <button class="btn btn--center btn--small btn--hidden" (click)="balanceService.goToTrade(item)">Trade</button>
+          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="balanceService.goToTrade(item)">Trade</button>
         </td>
         <td class="table__cell">
-          <button class="btn btn--center btn--small btn--hidden" (click)="cryptoWithdrawOut.emit(item)">Withdraw</button>
+          <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoWithdrawOut.emit(item)">Withdraw</button>
         </td>
       </tr>
     </tbody>
