--- a/src/assets/scss/pages/_balance.scss
+++ b/src/assets/scss/pages/_balance.scss
@@ -357,10 +357,12 @@
     &__your-active-item {
       display: flex;
       align-items: center;
+      margin-top: 4px;
       &:first-child {
         margin-right: 20px;
       }
       svg {
+        vertical-align: middle;
         margin-right: 4px;
         fill: #000;
       }
@@ -605,7 +607,7 @@
     .balance {
       &__your-active {
         &:before {
-          background-color: #fff;
+          background-color: #94c2ff;
         }
       }
       &__your-active-item {
@@ -624,6 +626,21 @@
       }
       &__currency-name {
         color: inherit;
+      }
+      .table__date-time {
+        color: inherit;
+
+        div:nth-child(2) {
+          color: $light-blue;
+        }
+      }
+      &__paginator{
+        .dropdown__btn{
+          color:#fff;
+          &:after{
+            border-top-color: #fff;
+          }
+        }
       }
     }
   }
