--- a/src/app/transaction-history/transaction-history.component.html
+++ b/src/app/transaction-history/transaction-history.component.html
@@ -277,7 +277,7 @@
     </table>
     <!--table end-->
     <!--paginator start-->
-    <div class="row row--aic" style="margin: 0 16px;">
+    <div class="row row--aic transaction__paginator">
       <div class="show-filter">
         Showing <span>1</span> to
         <div class="dropdown" #dropdown>
