--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -325,7 +325,7 @@
     </table>
     <!--table end-->
     <!--paginator start-->
-    <div class="row row--aic" style="margin: 0 16px;">
+    <div class="row row--aic orders__paginator">
       <div class="show-filter">
         Showing <span>1</span> to
         <div class="dropdown" #dropdown (click)="toggleDropdown($event)">
