--- a/src/assets/scss/pages/_orders.scss
+++ b/src/assets/scss/pages/_orders.scss
@@ -82,7 +82,7 @@
         content: '';
         display: block;
         position: absolute;
-        bottom: 1px;
+        bottom: 0;
         z-index: -1;
         width: 100%;
         height: 1px;
@@ -166,8 +166,10 @@
         right: 16px;
       }
     }
-
     // popup yes\no end
+    &__paginator{
+      margin: 28px 16px 40px;
+    }
   }
 }
 
@@ -235,6 +237,16 @@
 
       .show-filter {
         color: $light-blue;
+      }
+
+      &__paginator {
+        .dropdown__btn {
+          color: #fff;
+
+          &:after {
+            border-top-color: #fff;
+          }
+        }
       }
 
     }
