--- a/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
@@ -40,7 +40,7 @@
       <span>{{item.exExchangeRate  | replaceNumber}} </span>
     </td>
     <td class="table__cell">
-      <span>{{item.amountConvert | replaceNumber}} {{arrPairName[0]}}</span>
+      <span>{{item.amountBase | replaceNumber}} {{arrPairName[0]}}</span>
     </td>
     <td class="table__cell txt-grey">
       <span>{{item.commissionValue | replaceNumber}}%</span>
