--- a/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
@@ -72,7 +72,7 @@
       <span>{{item.exExchangeRate | replaceNumber}} USD</span>
     </td>
     <td class="table__cell">
-      <span>{{item.amountConvert | replaceNumber}} BTC</span>
+      <span>{{item.amountBase | replaceNumber}} BTC</span>
     </td>
     <td class="table__cell txt-grey">
       <span>{{item.commissionValue | replaceNumber}}%</span>
