--- a/src/assets/scss/pages/_orders.scss
+++ b/src/assets/scss/pages/_orders.scss
@@ -75,6 +75,7 @@
 
     &__filters {
       display: flex;
+      align-items: center;
       position: relative;
       margin-top: 28px;
 
@@ -102,9 +103,28 @@
     &__datepicker {
       width: 175px;
       margin-right: 24px;
+      bottom: -1px;
 
       .wrap-input__label {
         left: 17px;
+      }
+    }
+
+    &__search-btn {
+      position: relative;
+      padding: 0 12px;
+      -webkit-border-radius: 4px 4px 0 0 ;
+      -moz-border-radius: 4px 4px 0 0 ;
+      border-radius: 4px 4px 0 0 ;
+      bottom: -1px;
+      svg{
+        vertical-align: middle;
+        fill:$light-blue;
+      }
+      &:hover{
+        svg{
+          fill:#fff;
+        }
       }
     }
 
@@ -166,8 +186,9 @@
         right: 16px;
       }
     }
+
     // popup yes\no end
-    &__paginator{
+    &__paginator {
       margin: 28px 16px 40px;
     }
   }
