fix refill money

--- a/src/app/funds/balance/refill-money/refill-money.component.html
+++ b/src/app/funds/balance/refill-money/refill-money.component.html
@@ -15,8 +15,8 @@
         <!--<a class="modal__control-mob" href="#">-->
         <!--<img class="modal__control-icon" src="../../../assets/img/minimize-mob-blue.svg">-->
         <!--</a>-->
-        <a class="modal__control-mob" href="#">
-          <img class="modal__control-icon" src="../../../assets/img/learn-blue.svg"></a>
+        <!--<a class="modal__control-mob" href="#">-->
+          <!--<img class="modal__control-icon" src="../../../assets/img/learn-blue.svg"></a>-->
         <a class="modal__control-mob" (click)="onCloseRefillBalancePopup()">
           <img class="modal__control-icon" src="../../../assets/img/close-blue.svg"></a>
       </div>
@@ -28,7 +28,7 @@
             [ngClass]="{'steps__item--current': step === 1}"
         >
           <a class="steps__link" (click)="setStep(1)">
-            <span class="steps__number  steps__number--current">1</span>
+            <span class="steps__number" [ngClass]="{'steps__number--current': step === 1, 'steps__number--valid': step != 1 }">1</span>
             <span class="steps__number-mob-current">1. Refill money</span>
             <span class="steps__title">Refill money</span>
           </a>
@@ -38,7 +38,7 @@
             [ngClass]="{'steps__item--current': step === 2}"
         >
           <a class="steps__link" (click)="setStep(2)">
-            <span class="steps__number steps__number--current">2</span>
+            <span class="steps__number" [ngClass]="{'steps__number--current': step === 2, 'steps__number--valid': step != 2 }">2</span>
             <span class="steps__number-mob-current">2. {{stepTwoName}}</span>
             <span class="steps__title">{{stepTwoName}}</span>
           </a>
