--- a/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
@@ -26,10 +26,10 @@
 
         <perfect-scrollbar>
           <ng-container *ngFor="let letter of alphabet">
-            <h6 class="select__searching-items-title">{{letter.toUpperCase()}}</h6>
+            <h6 class="select__searching-items-title"><span>{{letter.toUpperCase()}}</span></h6>
             <div class="select__searching-items-wrap">
               <div class="select__searching-item" *ngFor="let name of cryptoNames | groupCoin:letter" (click)="selectCurrency(name)">
-                <!--<img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">-->
+                <img src="../../assets/img/eth-icon.svg" class="select__list-item-icon">
                 <span>{{name.name}}</span>
               </div>
             </div>
