--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.scss
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.scss
@@ -65,9 +65,8 @@
   }
 
   .modal__note {
-    width: calc(100% + 64px);
-    left: -32px;
-    margin-top: 32px;
+    width: 100%;
+    left: 0;
   }
 }
 
