--- a/src/app/funds/balance/send-money/send-money.component.html
+++ b/src/app/funds/balance/send-money/send-money.component.html
@@ -17,8 +17,8 @@
         <!--<a class="modal__control-mob" href="#">-->
         <!--<img class="modal__control-icon" src="../../../assets/img/minimize-mob-blue.svg">-->
         <!--</a>-->
-        <a class="modal__control-mob" href="#">
-          <img class="modal__control-icon" src="../../../assets/img/learn-blue.svg"></a>
+        <!--<a class="modal__control-mob" href="#">-->
+          <!--<img class="modal__control-icon" src="../../../assets/img/learn-blue.svg"></a>-->
         <a class="modal__control-mob" (click)="onCloseSendMoneyPopup()">
           <img class="modal__control-icon" src="../../../assets/img/close-blue.svg"></a>
       </div>
