--- a/src/assets/scss/components/_steps.scss
+++ b/src/assets/scss/components/_steps.scss
@@ -178,7 +178,7 @@
             color: #fff;
           }
           .steps__link{
-            background: radial-gradient(50% 3px at center 93%, #237BEF 10%, #24253F 80%);
+            background: radial-gradient(50% 3px at center 93%, #237BEF 10%, transparent 80%);
           }
         }
       }
